# Virus-Tracker-TK4

./: CMakeLists.txt  Dokumentation_Gruppe5.docx  README.md  id_name.csv  interactions.csv  main.c  main.h  test_id.csv  testdaten.c  testdaten.h  testdaten_TESTS.txt  virus.c
VirusTracker/: CMakeLists.txt  dijkstra.c  dijkstra.h  graphviz.c  graphviz.h  main.c  testdaten.c  testdaten.h
testdaten/: main.c  names.csv  testdaten.c  testdaten.h
